# sigenpy

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  pyproject.toml  secrets.json.example  setup.py
examples/: DATA_COLLECTION_README.md  example_usage.py  extract_historical_data.py  realtime_energy_display.py  test_get_systems.py
sigenpy/: __init__.py  sigen_api.py  sigen_config.py
